// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when disabled 1`] = `
.glamor-3,
[data-glamor-3] {
  position: relative;
}

.glamor-1,
[data-glamor-1] {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  pointer-events: none;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 24px;
  height: 24px;
  color: #9E9FA0;
  stroke-width: 2;
  padding-left: 1rem;
  padding-right: 1rem;
  box-sizing: content-box;
}

.glamor-2,
[data-glamor-2] {
  -webkit-appearance: none;
  box-sizing: border-box;
  display: block;
  width: 100%;
  margin: 0;
  padding: 0.75rem 1rem 0.75rem 56px;
  font-family: inherit;
  font-size: 1rem;
  line-height: 1.5;
  color: rgba(0, 3, 6, 0.38);
  background-color: rgba(0, 3, 6, 0.04);
  border: none;
  border-radius: 4px;
  outline: none;
  box-shadow: inset 0 0 0 1px rgba(0, 3, 6, 0.12);
  transition: box-shadow 150ms ease-in-out;
  pointer-events: none;
  -webkit-transition: box-shadow 150ms ease-in-out;
  -moz-transition: box-shadow 150ms ease-in-out;
}

.glamor-2:hover,
[data-glamor-2]:hover,
.glamor-2 :focus,
[data-glamor-2] :focus {
  box-shadow: 0 0 0 1px rgba(0, 3, 6, 0.12), 0 4px 8px 0 rgba(0, 3, 6, 0.12), 0 2px 4px 0 rgba(0, 3, 6, 0.07);
}

.glamor-2::-webkit-search-decoration,
[data-glamor-2]::-webkit-search-decoration {
  display: none;
}

<div
  className="glamor-3"
>
  <div
    className="glamor-1"
  >
    <span
      className="glamor-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-search\\"><circle cx=\\"10.5\\" cy=\\"10.5\\" r=\\"7.5\\"></circle><line x1=\\"21\\" y1=\\"21\\" x2=\\"15.8\\" y2=\\"15.8\\"></line></svg>",
        }
      }
    />
  </div>
  <input
    className="glamor-2"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    required={false}
    type="search"
    value=""
  />
</div>
`;

exports[`renders without crashing 1`] = `
.glamor-3,
[data-glamor-3] {
  position: relative;
}

.glamor-1,
[data-glamor-1] {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  pointer-events: none;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 24px;
  height: 24px;
  color: #9E9FA0;
  stroke-width: 2;
  padding-left: 1rem;
  padding-right: 1rem;
  box-sizing: content-box;
}

.glamor-2,
[data-glamor-2] {
  -webkit-appearance: none;
  box-sizing: border-box;
  display: block;
  width: 100%;
  margin: 0;
  padding: 0.75rem 1rem 0.75rem 56px;
  font-family: inherit;
  font-size: 1rem;
  line-height: 1.5;
  color: rgba(0, 3, 6, 0.87);
  background-color: #FFFFFF;
  border: none;
  border-radius: 4px;
  outline: none;
  box-shadow: 0 0 0 1px rgba(0, 3, 6, 0.12), 0 2px 4px 0 rgba(0, 3, 6, 0.07);
  transition: box-shadow 150ms ease-in-out;
  -webkit-transition: box-shadow 150ms ease-in-out;
  -moz-transition: box-shadow 150ms ease-in-out;
}

.glamor-2:hover,
[data-glamor-2]:hover,
.glamor-2 :focus,
[data-glamor-2] :focus {
  box-shadow: 0 0 0 1px rgba(0, 3, 6, 0.12), 0 4px 8px 0 rgba(0, 3, 6, 0.12), 0 2px 4px 0 rgba(0, 3, 6, 0.07);
}

.glamor-2::-webkit-search-decoration,
[data-glamor-2]::-webkit-search-decoration {
  display: none;
}

<div
  className="glamor-3"
>
  <div
    className="glamor-1"
  >
    <span
      className="glamor-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-search\\"><circle cx=\\"10.5\\" cy=\\"10.5\\" r=\\"7.5\\"></circle><line x1=\\"21\\" y1=\\"21\\" x2=\\"15.8\\" y2=\\"15.8\\"></line></svg>",
        }
      }
    />
  </div>
  <input
    className="glamor-2"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search"
    required={false}
    type="search"
    value=""
  />
</div>
`;
